# ooiconv

./: .gitignore  Makefile.am  bootstrap.sh  configure.ac
include/: IConv.h
src/: Converter.cpp  Converter.h  Makefile.am  ooiconv-autoconf.h.in  ooiconv.cpp  ooiconv_precomp.h
